# bibliotekar

./: .gitignore  AGENTS.md  README.md  bibliotekar_ui.py  index.md  pyproject.toml
bibliotekar/: __init__.py  agent.py  aml_hip.py  article_generator.py  concept_extractor.py  config.py  contradictions.py  dashboard.py  gcal_integration.py  image_generator.py  ingest.py  linker.py  notion_integration.py  presentation_generator.py  providers.py  search.py  utils.py  wiki.py
bibliotekar/templates/: article.tex.j2
bibliotekar_data/: dashboard.html  schema.md
bibliotekar_data/wiki/: index.md  log.md
bibliotekar_data/wiki/concepts/: another.md  concepts.md  conjectures.md  cube.md  finally.md  first.md  god.md  gods-number-4x4.md  method.md  next.md  number.md  reduction.md  research.md  revenge.md  rubik.md  test.md  watch.md  yau.md
bibliotekar_data/wiki/queries/: query-gods-number-4x4.md  query-how-to-solve-a-4x4-rubik-cube-optimally.md  query-how-to-solve-a-4x4-rubik-s-cube-optimally.md  query-what-is-in-the-wiki.md  query-what-is-the-god-s-number-for-the-4-4-cube.md
bibliotekar_data/wiki/sources/: source-gods_number_4x4-txt.md  source-info1-txt.md  source-info2-md.md  source-method-txt.md  source-raw-txt.md  source-sample-txt.md  (+2 more)
docs/: development.md  guidelines.md  history.md  usage.md
tests/: conftest.py  test_agent.py  test_aml_hip.py  test_article_and_presentation.py  test_concepts_and_search.py  test_demo_4x4.py  test_gods_number.py  test_image_generator.py  test_ingest.py  test_integration.py  test_notion_gcal.py  test_stability.py  test_wiki.py
(+2 files in other folders)
